# bigquery-agent-mcp

./: .env.example  .gitignore  MCP_SETUP.md  README.md  main.py  mcp_server.py  pyproject.toml  requirements.txt
src/: llm_config.py
src/bigquery_agent/: agent.py  main.py
src/dashboard_agent/: agent.py  main.py
