[project]
name = "bigquery-dashboard-mcp"
version = "0.1.0"
description = "Serveur MCP intelligent pour BigQuery et Dashboard avec support multi-LLM"
authors = [
    {name = "Youness Drissi Slimani", email = "youness@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "google-cloud-bigquery>=3.38.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "db-dtypes>=1.4.0",
    "plotly>=5.0.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
bigquery-dashboard-mcp = "mcp_server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']
